k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoom-clone
  labels:
    app: zoom-clone
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zoom-clone
  template:
    metadata:
      labels:
        app: zoom-clone
    spec:
      containers:
        - name: zoom-clone
          image: zoom-clone:latest
          ports:
            - containerPort: 3000
