k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zoom-clone
  labels:
    app: zoom-clone
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: zoom-clone
  type: ClusterIP
