k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zoom-clone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: zoom-clone.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: zoom-clone
                port:
                  number: 80
